<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="335dp"
    android:layout_height="362dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="24dp"
    android:layout_margin="40dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/frame_1171"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="39dp"
            android:textColor="#040D1B"
            android:textAlignment="center"
            android:textSize="26dp"
            android:text="@string/congratulations"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#4E5358"
            android:textAlignment="center"
            android:textSize="14dp"
            android:text="@string/otp_verified_successfully"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingTop="10dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnall"
                android:text="@string/next"
                android:textAllCaps="false"
                android:layout_gravity="center"/>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>